@@ -17,9 +17,9 @@ Latest Stable Release (<b>2.2.4</b>):
 <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.4.tar.gz">tar.gz</a></li>
 
 <li>
-Latest Beta Release (<b>2.3.26</b>):
-<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.26.tar.gz">tar.gz</a>,
-<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.26.tar.bz2">tar.bz2</a></li>
+Latest Beta Release (<b>2.3.27</b>):
+<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.27.tar.gz">tar.gz</a>,
+<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.27.tar.bz2">tar.bz2</a></li>
 
 <li>
 Latest Alpha Versions:
