@@ -29,7 +29,7 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 <blockquote>
 <table border=0 cellpadding=0 cellspacing=0>
   <tr><td>Latest Stable Release: <td><b>2.2.4</b></tr>
-  <tr><td>Latest Beta Release: <td><b>2.3.26</b></tr>
+  <tr><td>Latest Beta Release: <td><b>2.3.27</b></tr>
 </table>
 </blockquote>
 
