@@ -1,3 +1,8 @@
+2001-01-03  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* index.html:
+	* download.html: increased version number to 2.3.27
+
 2000-12-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html:
